--- a/css/css_section.less
+++ b/css/css_section.less
@@ -189,7 +189,7 @@
 	
 /* CONTENT */ /* CONTENT */ /* CONTENT */ /* CONTENT */
 
-section#visit, section#cabinet, section#my_account, section#message, section#profile {
+section#visit, section#cabinet, section#account, section#message, section#profile {
 	.pt(60px);
 	.box-sizing;
 	.h(85%);
@@ -198,7 +198,7 @@ section#visit, section#cabinet, section#my_account, section#message, section#pro
 
 @media only screen and (max-width : 1200px){
 	
-	section#visit, section#cabinet, section#search, section#my_account, section#message {
+	section#visit, section#cabinet, section#search, section#account, section#message {
 	
 		.col {
 			.w(99%)!important;
@@ -209,11 +209,11 @@ section#visit, section#cabinet, section#my_account, section#message, section#pro
 @media only screen and (max-width : 480px){
 	
 	
-	section#visit, section#cabinet, section#calendar, section#my_account, section#message {
+	section#visit, section#cabinet, section#calendar, section#account, section#message {
 		.pt(20px);		
 		
 		.window {
-			.pp(10px 5px);
+			.pp(10px 5px)!important;
 		}
 	}
 }
