--- a/css/css_search.less
+++ b/css/css_search.less
@@ -1,5 +1,5 @@
 /* BORDER */ /* BORDER */ /* BORDER */ /* BORDER */
-	
+
 	.b (@bb:none) {
 		border:@bb;
 	}
@@ -15,12 +15,12 @@
 	.br (@br:none) {
 		border-right:@br;
 	}
-			
+
 /* PADDING */ /* PADDING */ /* PADDING */ /* PADDING */
-	
+
 	.pp (@pp:10px 10px 10px 10px) {
 		padding:@pp;
-	}	
+	}
 	.pt (@pt:10px) {
 		padding-top:@pt
 	}
@@ -32,13 +32,13 @@
 	}
 	.pr (@pt:10px) {
 		padding-right:@pt
-	}	
-	
+	}
+
 /* MARGIN */ /* MARGIN */ /* MARGIN */ /* MARGIN */
-	
+
 	.m (@m:10px) {
 		margin:@m;
-	}	
+	}
 	.mt (@mt:10px) {
 		margin-top:@mt
 	}
@@ -50,10 +50,10 @@
 	}
 	.mr (@mr:10px) {
 		margin-right:@mr
-	}		
-		
+	}
+
 /* FLOAT */ /* FLOAT */ /* FLOAT */ /* FLOAT */
-	
+
 	.fl {
 		float:left;
 	}
@@ -63,21 +63,21 @@
 	.fn {
 		float:none;
 	}
-	
+
 /* FLOAT */ /* FLOAT */ /* FLOAT */ /* FLOAT */
-	
+
 	.clear {
 		clear:both;
-	}	
+	}
 	.dib {
 		display:inline-block;
-	}	
+	}
 	.di {
 		display:inline;
-	}	
+	}
 	.db {
 		display:block;
-	}	
+	}
 	.dn {
 		display:none;
 }
@@ -85,22 +85,22 @@
 /* fonts */ /* fonts */ /* fonts */ /* fonts */
 	.c(@color:#FFF){
 		color:@color;
-	}	
+	}
 	.bold {
-		font-weight:600;	
-	}	
+		font-weight:600;
+	}
 	.lighter {
-		font-weight:300;	
-	}	
+		font-weight:300;
+	}
 	.normal{
-		font-weight:normal;	
-	}	
+		font-weight:normal;
+	}
 	.italic {
 		font-style:italic;
-	}		
+	}
 	.left {
 		text-align:left;
-	}	
+	}
 	.right {
 		text-align:right;
 	}
@@ -117,14 +117,14 @@
 		text-align:justify;
 	}
 	.uppercase {
-		text-transform: uppercase;	
-	}	
+		text-transform: uppercase;
+	}
 	.lowercase {
-		text-transform: lowercase;	
-	}	
+		text-transform: lowercase;
+	}
 	.text-shadow (@shadow: 1px 1px 0 #e0e0e0) {
-		text-shadow:@shadow;		
-	}	
+		text-shadow:@shadow;
+	}
 	.lh (@lh:23px) {
 		line-height:@lh;
 	}
@@ -135,7 +135,7 @@
 		font-weight:@font-weight;
 	}
 /* OTHER */	/* OTHER */	/* OTHER */	/* OTHER */
-	
+
 	.pointer {
 		cursor:pointer;
 	}
@@ -144,19 +144,19 @@
 	}
 	.absolute {
 		position:absolute;
-	}	
+	}
 	.bg (@bg:#FFF) {
 		background:@bg;
-	}	
+	}
 	.bp (@bp:0 0) {
 		background-position:@bp;
-	}	
+	}
 	.list {
 		list-style-type:none;
-	}	
+	}
 	.w (@w:100%) {
 		width:@w;
-	}	
+	}
 	.minw (@minw:50%) {
 		min-width:@minw;
 	}
@@ -164,13 +164,13 @@
 		max-width:@maxw;
 	}
 	.h (@h:100%) {
-		height:@h;		
+		height:@h;
 	}
 	.minh (@minh:100%) {
-		min-height:@minh;		
+		min-height:@minh;
 	}
 	.maxh (@maxh:100%) {
-		max-height:@maxh;		
+		max-height:@maxh;
 	}
 	.radius (@radius:10px) {
 		border-radius: @radius;
@@ -180,13 +180,13 @@
 	}
 	.box-sizing {
 		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;    
-		box-sizing: border-box; 
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 	}
 	.box-shadow (@bs:0px 0px 2px #c6c6c6) {
 		box-shadow:@bs;
-	}	
-	
+	}
+
 /* CONTENT */ /* CONTENT */ /* CONTENT */ /* CONTENT */
 
 /* COLOR BASE */
@@ -206,13 +206,13 @@
 
 section#search {
 	.pt(30px);
-	
+
 	.window {
-		.pp(15px);	
+		.pp(15px);
 		.left;
 		.relative;
 	}
-	
+
 	input {
 		.m(auto);
 		.w;
@@ -220,41 +220,41 @@ section#search {
 		.box-sizing;
 		.bg(#f4f4f4);
 		.b(1px solid @border-1);
-		.c(@grey-2);		
+		.c(@grey-2);
 	}
-	
+
 	.filter {
 		.mb(20px);
-		
+
 		span.title {
 			.left;
-			.fw(600);	
+			.fw(600);
 			.fl;
 			.mb(15px);
 			.h(33px);
 			.lh(33px);
 		}
-		
+
 		.hidden {
 			.fr;
 		}
-			
+
 		ul.field {
 			.fl;
 			.w;
-			
+
 			li {
 				.dib;
 				.w(50%);
 				.center;
 				.fl;
 				.box-sizing;
-					
+
 				&:nth-child(2n) {
 					.pl(10px);
 				}
-			}		
-			
+			}
+
 			label, fieldset {
 				.fl;
 				.w;
@@ -262,13 +262,13 @@ section#search {
 				.m(4px 0);
 				.c(@grey-2);
 				.fw(300);
-			}	
-			
+			}
+
 			li.time {
 				input {
 					.w(85%);
 				}
-				
+
 				i {
 					.size(28px);
 					.relative;
@@ -278,73 +278,73 @@ section#search {
 					.c(@blue-1);
 				}
 			}
-			
+
 			li.full {
 				.w;
 			}
-		}	
-	
-	
+		}
+
+
 		ul.action {
-			.center;		
+			.center;
 			.dib;
 			.w;
 			.b(0);
 			.m(10px auto auto);
 			.pp(10px 0 0);
-			.bt(1px solid @border-1);		
-			
+			.bt(1px solid @border-1);
+
 			li {
 				.dib;
-				float:none;			
+				float:none;
 				.w(auto);
 				.m(0 8px);
 			}
 		}
 	}
-	
+
 	.filter.small {
 		.h(76px);
 		.mt(-20px);
-		
+
 		.hidden {
 			.dn;
 		}
-		
+
 		ul.field {
 			.w(82%);
-			
+
 			label {
 				.w(20%);
 				.lh(38px);
 			}
-			
+
 			fieldset {
 				.w(80%);
 			}
-		}	
-		
+		}
+
 		ul.action {
 			.w(18%);
 			.bt(0);
 			.mt(5px);
 			.pp(0);
 			.right;
-			
+
 			li {
 				.m(0);
 			}
 		}
-	}	
-	
+	}
+
 	.row.result {
 		.mt(20px);
-		
+
 		.window {
 			.pp(0 15px);
 		}
 	}
-	
+
 	ul.bxslider {
 		.fl;
 		.w;
@@ -354,13 +354,13 @@ section#search {
 	ul.list {
 		.fl;
 		.w;
-					
+
 		li {
 			.fl;
 			.w;
 			display:table;
 			.relative;
-		
+
 			&:before {
 				content:'';
 				.w;
@@ -371,51 +371,50 @@ section#search {
 				.bg( @border-1);
 				.dib;
 			}
-			
-			
+
+
 			&:first-child {
 				.bt(0);
-				
+
 				&:before {
 					content:none;
 				}
-			}			
+			}
 		}
-	}	
+	}
 
 	.box {
 		.dib;
-		.w(36%);
 		.bl(1px dotted @border-1);
-		.pp(10px 10px 10px 15px);
+		.pp(0);
 		.box-sizing;
-		vertical-align:middle;
+		vertical-align:top;
 		.relative;
-		.minh(83px);
-		
-		&:first-child {		
+		.minh(60px);
+
+		&:first-child {
 			.bl(0);
-			.pl(0);				
+			.pl(0);
 		}
-		
+
 		a {
 			.c(@blue-2);
 			.tdn;
 		}
-		
-		span.name {			
+
+		span.name {
 			.h(auto);
 			.lh(normal);
 			.w(70%);
-			.fl;				
+			.fl;
 		}
-				
+
 		.pic {
-			.fr;
-			.w(23%);
+			.fl;
+			.w(50%);
 			.minw(60px);
 		}
-		
+
 		.images {
 			.fl;
 			.w;
@@ -426,7 +425,7 @@ section#search {
 			.box-sizing;
 			.maxw(80px);
 			.relative;
-					
+
 			a.more {
 				.c(#FFF);
 				.bg(@blue-1);
@@ -437,156 +436,112 @@ section#search {
 				right:0px;
 				.radius(100%);
 				.center;
-				
+
 				i {
 					.size(14px);
 					.c(#FFF);
 					.mr(0);
 				}
 			}
-				
+
 			img {
 				.w;
 				.h(auto);
 				.fl;
 				.radius(100%);
-			}	
+			}
+		}
+
+		.name {
+			.dib;
+			.w(50%);
+			.fl;
 		}
 		
-		span {
-			.db;
-			.w;		
-		}			
-		
-		span.title {			
-			.italic;
-			.size(12px);
-			.fw(300);
-			.c(@grey-2);
-			.pp(0);			
-		}
 		
 		span.specialization {
 			.size(12px);
-		}
-		
-		span.address {
-			.mt(10px);
+			.fl;
 			.w;
-		}	
+		}
+
 		
+		.address {
+			.fl;
+			.w(50%);
+	
+			
+			a {
+				.fl;
+				.size(13px);
+			}
+				
+			span.number {
+				.fl;
+				.size(24px);				
+				.size(20px);
+				.fw(600);
+				.radius(100%);
+				.b(1px solid @blue-2);
+				.w(25px);
+				.h(25px);
+				.lh(25px);
+				.c(@blue-2);
+				.fw(600);
+				.center;
+				.mr(10px);
+				.relative;
+				.dib;
+				.uppercase;
+			}
+			
+			span.company {
+			
+				
+			}
+		
+			span.street {
+				.mt(5px);
+				.w;
+				.fl;
+				.size(13px);
+			}
+		}
+
 	}
 	
-	.box.first {
+	.box.pic {
 		.pl(0);
-		.w(25%);
+		.w(6%);
 	}
 	
-	.box.action {
-		.minw(45px);
-		.w(3%);
-		vertical-align:middle;
-		.fr;
-		.pr(5px);
-		.right;
+	.box.data {
+		.pl(20px);
+		.w(43%);
+		.box-sizing;
+		.bl(0);
+	}
+
+	.box.calendar {
+		.w(50%);
+		.dib;
 		.center;
 		
 		a {
-			.db;
-			.size(24px);
-			.m(5px 0);
-			.size(20px);
+			.size(18px);
 			.fw(600);
-			.radius(100%);
-			.b(1px solid @blue-2);
-			.w(25px);
-			.h(25px);
-			.lh(25px);
-			.c(@blue-2);
-			.fw(600);
-			.center;
-			top:15px;
-			.relative;
-			.dib;
-			.uppercase;
 		}
-	}
 		
-	.date-visit {			
-		display:table-cell;
-		vertical-align:middle;
-		.pp(5px 15px 5px 0);
-		.box-sizing;
-		.fw(600);
-		.size(17px);
-		.left;
-		.c(@blue-1);
-		.br(1px solid @blue-1);
-		.relative;
-		
-		
-		span {
-			.absolute;
-			top:39%;
-			right:-13px;
-			.bg(@blue-1);
-			.radius(100%);
-			.w(22px);
-			.h(22px);
-			z-index:1;
-			.center;
-			
-			&:before {	
-				content:'';
-				font-family: FontAwesome;				
-				.fl;			
-				.c(#FFF);
-				.size(13px);
-				.radius(100%);			
-				.center;
-				z-index:2;	
-				.dib;
-				.w(22px);
-				.h(22px);
-				.lh(23px);
-			}
-		}
-	}
-	
-	.date-visit.plane span {
-		&:before {
-			content:'\f0f6';
-		}
-	}
-
-	.date-visit.check span{
-		&:before {
-			content:'\f00c';
-		}
-	}
-	
-	.date-visit.ban span {
-		&:before {
-			content:'\f05e';		
-		}
-	}
-	
-
-
-	.box.calendar {
-		.w(35%);			
-		
-		ul.day, ul.days {
+		.terms {
 			display:table;
 			.w;
-			.mb(0);
 			
 			li {
-				display:table-cell;
-				.w(19.5%);
-				.pp(5px 0);
-				.center;
-				.size(13px);
+				.w(33%);
+				.dib;
+				.b(0);
+				.pp(0 10px);
+				.box-sizing;
 				
 				&:before {
 					content:none;
@@ -594,39 +549,66 @@ section#search {
 			}
 		}
 		
-		ul.day {
-					
-			li {
-				.bg(@blue-1);
-				.bl(1px solid @border-1);
-				.center;
-				.c(#FFF);
-				
-				&:first-child {
-					.b(0);
-				}
+		.day {
+			.fl;
+			.w;	
+			.center;
+			
+			.date {
+				.fl;
+				.w(100%);
+				.dib;
+				.lh(24px);
+			
 			}
+		}	
+		
+		.percent {
+			.bg(@border-1);
+			.radius(10px);
+			.w(100%);
+			.fl;
+			.h(24px);
+			
+			span {
+				.c(#FFF);
+				.lh(24px);
+				.bg(@blue-1);
+				.radius(10px);
+				.center;
+				.size(12px);
+				.fl;
+				
+			}
+			
 		}
+		
+		
+		
+			
 	}
+
+	
+
 }
 
 
 @media only screen and (max-width : 480px){
 
 	section#search {
-		
+
 		ul.list {
 			li {
 				.pp(15px 0);
 			}
 		}
-		
+
 		.date-visit {
 			.w;
 			.dib;
 			.pp(0);
 			.b(0);
-			
+
 			span {
 				.relative;
 				.fl;
@@ -634,18 +616,18 @@ section#search {
 				left:0;
 				.mr(5px);
 			}
-		}		
-		
+		}
+
 		.box, .box.first {
 			.w;
 			.pp(0);
 			.b(0);
 		}
-		
+
 		.box {
 			.mt(10px);
 		}
-		
+
 		.box.action {
 			.w(auto);
 			.b(0);
@@ -653,24 +635,24 @@ section#search {
 			top:5px;
 			right:0;
 			.mt(0);
-			
+
 			a {
 				.dib;
 				.m(0 5px);
 			}
 		}
-		
+
 		.box {
 			span.name {
 				.w(70%);
 			}
-			
+
 			.pic {
 				.fr;
 				.w(60px);
 			}
 		}
-	}	
+	}
 
 
 }
