--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(css/css_elements.css);
+@import url(elements.css);
 @import url(css/css_blue.css);
 @import url(css/css_section.css);
 @import url(css/css_account.css);
